Fixed layout issues

--- a/src/webviews/apps/calc/calc.scss
+++ b/src/webviews/apps/calc/calc.scss
@@ -4,6 +4,7 @@
 
 .container {
     display: flex;
+    justify-content: center;
     min-height: 100%;
     margin: 0;
     padding: 0;
